--- a/Try saved models LULC equal class 4200.ipynb
+++ b/Try saved models LULC equal class 4200.ipynb
@@ -3,29 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b6f6f01-00f5-423d-9ac0-9dcb6052e441",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ee\n",
+    "import ee,os\n",
     "import geemap"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7488e429-b32e-48c2-8571-791e4ccc1298",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d201c01cd5364f03bc8df611f319c7f6",
+       "model_id": "7c3511cd06ad46ee811c73f0f3224a57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[28.3949, 84.124], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(chil…"
+       "Map(center=[30, 110], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children=(To…"
       ]
      },
      "metadata": {},
@@ -33,24 +31,31 @@
     }
    ],
    "source": [
+    "os.environ['HTTP_PROXY'] = 'http://127.0.0.1:7890'\n",
+    "os.environ['HTTPS_PROXY'] = 'http://127.0.0.1:7890'\n",
     "ee.Initialize()\n",
-    "Map = geemap.Map(center = [28.3949, 84.1240], zoom = 7)\n",
+    "\n",
+    "Map = geemap.Map(center = [30, 110], zoom = 7)\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2aef33ea-f6f5-460c-b515-51d236900f46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Np = ee.FeatureCollection(\"users/aaditya-rb/nepal_map\")\n",
+    "Np = ee.FeatureCollection(\"users/wufvckshuo/Nepal_Boundary\")\n",
+    "ROI = ee.FeatureCollection(\"users/wufvckshuo/QingJiang\")\n",
+    "Np = ROI\n",
     "L7 = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_SR\")\n",
+    "# L7 = ee.ImageCollection(\"LANDSAT/LC08/C01/T1_SR\")\n",
+    "\n",
+    "LULC = ee.ImageCollection(\"projects/sat-io/open-datasets/landcover/ESRI_Global-LULC_10m\")\n",
     "DEM = ee.Image(\"USGS/SRTMGL1_003\")\n",
     "L7_vis = {\"opacity\":1,\"bands\":[\"B4\",\"B3\",\"B2\"],\"min\":220,\"max\":19660,\"gamma\":1}\n",
     "\n",
-    "L7_np = L7.filterDate('2020-01-01', '2020-12-30') \\\n",
+    "L7_np = L7.filterDate('2001-01-01', '2001-12-31') \\\n",
     ".filterBounds(Np) \\\n",
     ".filterMetadata(\"CLOUD_COVER\", 'less_than', 10) \\\n",
     ".sort('CLOUD_COVER',False)"
@@ -59,7 +64,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9b20fe43-e76a-46ac-bc70-7a42cc7d92d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f355f523-9ddd-436e-b7cf-317aa96cadd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea38918c-b388-4e10-a676-a4889bc787da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +109,12 @@
     ".addBands(NDWI.select(\"NDWI\"))\\\n",
     ".addBands(MNDWI.select(\"MNDWI\"))\\\n",
     ".addBands(DEM_nepal) \\\n",
-    "# .addBands(LULC_icimod.select(\"b1\").rename(\"LULC\"))"
+    ".addBands(LULC.first().select(\"b1\").rename(\"LULC\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "614e9df2-5d5e-4765-addf-03c6e644553e",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e22eede4-4acd-4c04-bffe-6cfc7c3d482d",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,13 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "14ab2c1d-b633-4099-9ee7-3c74744a40bc",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the exported tree feature collection\n",
-    "rf_fc = ee.FeatureCollection(\"users/aaditya-rb/random_forest_strings_equal_class\")\n",
+    "rf_fc = ee.FeatureCollection(\"users/wufvckshuo/random_forest_strings_test\")\n",
+    "\n",
+    "# rf_fc = ee.FeatureCollection(\"users/wufvckshuo/samplingPoints_ZDQ\")\n",
     "\n",
     "# convert it to a classifier, very similar to the `ml.trees_to_classifier` function\n",
     "another_classifier = ml.fc_to_classifier(rf_fc)"
@@ -146,8 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "369a6205-22e8-4d81-b76d-846a9fce004d",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,29 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fe3b48ec-24d5-409d-b7c0-9ce37125f74e",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Map.addLayer(classified, {\"min\": 0, \"max\": 2, \"palette\": ['red', 'green', 'blue']},'classification')"
+    "Map.addLayer(classified, {\"min\": 0, \"max\": 6, \"palette\": ['red', 'green', 'blue']},'classification')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7c605d1b-2ef3-4578-bf86-47425ba3bb61",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d201c01cd5364f03bc8df611f319c7f6",
+       "model_id": "7c3511cd06ad46ee811c73f0f3224a57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(bottom=13987.0, center=[28.3949, 84.124], controls=(WidgetControl(options=['position', 'transparent_bg'], …"
+       "Map(bottom=13819.0, center=[30, 110], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=H…"
       ]
      },
      "metadata": {},
@@ -195,8 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6378576a-5a80-4ce8-a945-00e8aa57b703",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -213,18 +210,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6422b678-bab3-4d3e-ba10-475807ec64a2",
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/7139b06118f0e2ff50ce6fac93feca17-7a82de5c294e7125b510240ba05044a5:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to e:\\Work\\LULC-icimod\\LULC_MAP_2020.tif\n"
+     ]
+    }
+   ],
    "source": [
-    "# geemap.ee_export_image(classified, filename=\"LULC_MAP_2020.tif\", region=Np.geometry(), scale=500)\n"
+    "geemap.ee_export_image(classified, filename=\"LULC_MAP_2020.tif\", region=Np.geometry(), scale=500)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852b60a8-e33f-4f17-9191-6ee6a7aa7b57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,16 +238,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93fde856-80ae-4907-b80a-0a28b670ecd9",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -254,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
