--- a/Try saved models LULC.ipynb
+++ b/Try saved models LULC.ipynb
@@ -3,24 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b6f6f01-00f5-423d-9ac0-9dcb6052e441",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ee\n",
-    "import geemap"
+    "import ee,os\n",
+    "import geemap\n",
+    "\n",
+    "os.environ['HTTP_PROXY'] = 'http://127.0.0.1:7890'\n",
+    "os.environ['HTTPS_PROXY'] = 'http://127.0.0.1:7890'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7488e429-b32e-48c2-8571-791e4ccc1298",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24a3167aa0fb4a8997be235879a7caec",
+       "model_id": "ce4b31ecf61545faba052df9a1b0b5c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,12 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2aef33ea-f6f5-460c-b515-51d236900f46",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Np = ee.FeatureCollection(\"users/aaditya-rb/nepal_map\")\n",
+    "Np = ee.FeatureCollection(\"users/wufvckshuo/Nepal_Boundary\")\n",
     "L7 = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_SR\")\n",
     "DEM = ee.Image(\"USGS/SRTMGL1_003\")\n",
     "L7_vis = {\"opacity\":1,\"bands\":[\"B4\",\"B3\",\"B2\"],\"min\":220,\"max\":19660,\"gamma\":1}\n",
@@ -58,8 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9b20fe43-e76a-46ac-bc70-7a42cc7d92d4",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f355f523-9ddd-436e-b7cf-317aa96cadd4",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ea38918c-b388-4e10-a676-a4889bc787da",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "614e9df2-5d5e-4765-addf-03c6e644553e",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "e22eede4-4acd-4c04-bffe-6cfc7c3d482d",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,13 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "14ab2c1d-b633-4099-9ee7-3c74744a40bc",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the exported tree feature collection\n",
-    "rf_fc = ee.FeatureCollection(\"users/aaditya-rb/random_forest_strings_test\")\n",
+    "rf_fc = ee.FeatureCollection(\"users/wufvckshuo/random_forest_strings_equal_class\")\n",
     "\n",
     "# convert it to a classifier, very similar to the `ml.trees_to_classifier` function\n",
     "another_classifier = ml.fc_to_classifier(rf_fc)"
@@ -146,8 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "369a6205-22e8-4d81-b76d-846a9fce004d",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,8 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "fe3b48ec-24d5-409d-b7c0-9ce37125f74e",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,19 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "7c605d1b-2ef3-4578-bf86-47425ba3bb61",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24a3167aa0fb4a8997be235879a7caec",
+       "model_id": "ce4b31ecf61545faba052df9a1b0b5c1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(bottom=13958.0, center=[28.671310915880834, 84.61669921875001], controls=(WidgetControl(options=['position…"
+       "Map(bottom=13987.0, center=[28.3949, 84.124], controls=(WidgetControl(options=['position', 'transparent_bg'], …"
       ]
      },
      "metadata": {},
@@ -195,8 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "6378576a-5a80-4ce8-a945-00e8aa57b703",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -213,8 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "6422b678-bab3-4d3e-ba10-475807ec64a2",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/3b9025365fbc323d3120fd87ab9b8a8b-956a72c20130ab67001d6a8a871906ea:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/fad0d7c1779c4bf22f376e5fdfc1fa20-afbadacb66369ca3f0abdcf631182c2c:getPixels\n",
       "Please wait ...\n",
       "An error occurred while downloading.\n"
      ]
@@ -235,7 +224,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852b60a8-e33f-4f17-9191-6ee6a7aa7b57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,16 +231,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93fde856-80ae-4907-b80a-0a28b670ecd9",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -265,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
